--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
     "clean": "rimraf dist coverage",
-    "prepare": "npm-run-all clean lint test build"
+    "prepare": "npm-run-all clean lint test build",
+    "serve": "http-server ./"
   },
   "repository": {
     "type": "git",
